--- a/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AssemblyName>dotnet-umbrella-ts-aurelia</AssemblyName>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
