--- a/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
@@ -17,7 +17,7 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.AspNetCore.DataAnnotations</PackageId>
-		<Version>3.0.0-preview-0041</Version>
+		<Version>3.0.0-preview-0044</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2019</Copyright>
