--- a/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FreeImage-dotnet-core" Version="4.3.6" />
+    <PackageReference Include="FreeImage.Standard" Version="4.3.8" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
