--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -24,6 +24,7 @@
     <Description>This package contains a range of utility classes to aid application development.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,6 +45,7 @@
 
   <ItemGroup>
     <Folder Include="Configuration\Options\" />
+		<None Include="..\..\icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
   
 </Project>
