--- a/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
+++ b/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp3.1;net461</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
   </PropertyGroup>
