--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net461</TargetFramework>
+		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
-		<DocumentationFile>bin\Release\net461\Umbrella.Extensions.Logging.Log4Net.Azure.xml</DocumentationFile>
+		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.Extensions.Logging.Log4Net.Azure.xml</DocumentationFile>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
