--- a/Logging/test/Umbrella.Extensions.Logging.Log4Net.Azure.Test/Umbrella.Extensions.Logging.Log4Net.Azure.Test.csproj
+++ b/Logging/test/Umbrella.Extensions.Logging.Log4Net.Azure.Test/Umbrella.Extensions.Logging.Log4Net.Azure.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
