--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
@@ -44,8 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\Options\" />
-		<None Include="..\..\icon.png" Pack="true" PackagePath="\" />
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
   
 </Project>
