--- a/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
+++ b/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+		<PackageReference Include="Xamarin.CommunityToolkit" Version="1.0.3" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 		<PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
 	</ItemGroup>
