--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/package.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/package.json
@@ -8,26 +8,26 @@
 		"build-release": "webpack --mode production"
 	},
 	"devDependencies": {
-		"@types/webpack-env": "1.16.0",
-		"autoprefixer": "10.2.5",
-		"awesome-typescript-loader": "5.2.1",
-		"clean-webpack-plugin": "3.0.0",
-		"css-loader": "5.2.0",
-		"mini-css-extract-plugin": "1.4.1",
-		"node-sass": "5.0.0",
-		"optimize-css-assets-webpack-plugin": "5.0.4",
-		"postcss": "8.2.9",
-		"postcss-loader": "5.2.0",
+		"@types/webpack-env": "1.17.0",
+		"autoprefixer": "10.4.7",
+		"clean-webpack-plugin": "4.0.0",
+		"css-loader": "6.7.1",
+		"mini-css-extract-plugin": "2.6.1",
+		"node-sass": "7.0.1",
+		"css-minimizer-webpack-plugin": "4.0.0",
+		"postcss": "8.4.14",
+		"postcss-loader": "7.0.1",
 		"postcss-pseudoelements": "5.0.0",
-		"sass-loader": "11.0.1",
-		"terser-webpack-plugin": "5.1.1",
-		"typescript": "4.1.5",
-		"webpack": "5.31.0",
-		"webpack-bundle-analyzer": "4.4.0",
-		"webpack-cli": "4.6.0",
-		"webpack-node-externals": "2.5.2"
+		"sass-loader": "13.0.2",
+		"terser-webpack-plugin": "5.3.3",
+		"ts-loader": "9.3.1",
+		"typescript": "4.7.4",
+		"webpack": "5.74.0",
+		"webpack-bundle-analyzer": "4.5.0",
+		"webpack-cli": "4.10.0",
+		"webpack-node-externals": "3.0.0"
 	},
 	"dependencies": {
-		"animated-scroll-to": "2.2.0"
+		"animated-scroll-to": "2.3.0"
 	}
 }
